修复若干导致连接断开和卡住的bug